# crunge

./: .clang-format  .envrc-example  .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml  pyproject1.toml  requirements-dev.txt  setup.py
demo/box2d_demo/: README.md  pyproject.toml  requirements-dev.txt
demo/box2d_demo/box2d_demo/: constants.py  globals.py  obstacle.py
demo/box2d_demo/box2d_demo/character/: __init__.py  character_brain.py  dynamic_character.py  kinematic_character.py
demo/box2d_demo/box2d_demo/demo/: demo.py  demo_program.py  physics_demo copy.py  physics_demo.py  scrolling_demo.py  scrolling_demo_controller.py  tiled_demo.py
demo/box2d_demo/box2d_demo/entity/: __init__.py  kinematic_entity_2d.py  physics_entity_2d.py
demo/box2d_demo/box2d_demo/map/: map_loader.py
demo/box2d_demo/box2d_demo/objects/: tile.py
demo/box2d_demo/box2d_demo/physics/: geom.py  (+18 more)
demo/canvasdemo/: README.md  pyproject.toml  requirements-dev.txt
demo/canvasdemo/canvasdemo/: __init__.py  app.py  cli.py  page.py
demo/canvasdemo/tests/: test_canvasdemo.py
demo/enginedemo/: .env  README.md  pyproject.toml  requirements-dev.txt
demo/gltfv/: pyproject.toml  requirements-dev.txt
demo/gltfv/gltfv/: __main__.py  base.py  builder.py  camera.py  constants.py  gltfv.py  material.py  material_builder.py  mesh.py  mesh_builder.py  model_builder.py  node.py  normals.py  poly_node_builder.py  texture_builder.py  vertex_table.py  view.py  viewer.py
demo/imflodemo/: README.md  pyproject.toml  requirements-dev.txt
demo/imflodemo/imflodemo/: __init__.py  __main__.py  app.py  cli.py  page.py
demo/implotdemo/: pyproject.toml  requirements-dev.txt
demo/implotdemo/implotdemo/: __init__.py  __main__.py  app.py  cli.py  page.py
demo/layoutdemo/: README.md  pyproject.toml  requirements-dev.txt
demo/layoutdemo/layoutdemo/: __init__.py  app.py  cli.py  page.py
demo/layoutdemo/tests/: test_layoutdemo.py
demo/sdldemo/: .env  README.md  pyproject.toml  requirements-dev.txt
demo/skiademo/: README.md  pyproject.toml  requirements-dev.txt
demo/spritedemo/: .env  README.md  pyproject.toml  requirements-dev.txt
demo/spritedemo/spritedemo/: __init__.py  base.py  camera_2d.py  constants.py  geom.py  model_2d.py  node.py  node_2d.py  program.py  resource_kit.py  scene.py  scene_renderer.py  sprite.py  texture.py  texture_atlas.py  texture_atlas_kit.py  texture_kit.py  texture_kit_base.py  uniforms.py
demo/trimeshv/: pyproject.toml  requirements-dev.txt
demo/trimeshv/trimeshv/: __main__.py  builder.py  camera.py  cli.py  material.py  material_builder.py  mesh.py  mesh_builder.py  node.py  scene.py  scene_builder.py  texture.py  texture_builder.py  trimeshv.py  vertex_column.py  vertex_table.py  view.py  viewer.py
demo/uidemo/: README.md  pyproject.toml
demo/uidemo/tests/: test_version.py
demo/uidemo/uidemo/: __init__.py  app.py  cli.py
demo/wrender/: .env  README.md  pyproject.toml  requirements-dev.txt  wrender.prof
demo/wrender/wrender/: __main__.py  builder.py  builder_context.py  cli.py  material_builder.py  mesh.py  mesh_builder.py  model_builder.py  node.py  node_builder.py  poly_node_builder.py  primitive.py  primitive_builder.py  scene.py  scene_builder.py  scene_renderer.py  texture_builder.py  vertex_table.py  view.py  viewer copy.py  viewer.py  wrender copy.py  wrender.py
demo/yogademo/: README.md  pyproject.toml  requirements-dev.txt
pkg/bgfx/: CMakeLists.txt  pyproject.toml
pkg/bgfx/.bindgen/: bgfx.cpp  bgfx.toml  bgfx.yaml  embedded_shader.cpp  embedded_shader.toml  embedded_shader.yaml  platform.cpp  platform.toml  platform.yaml
pkg/bgfxdemo/: pyproject.toml  shaders_cache.bak  shaders_cache.dir
pkg/bgfxdemo/bgfxdemo/: __init__.py
pkg/bgfxdemo/examples/: shaders_cache.bak  shaders_cache.dir
pkg/bgfxdemo/tests/: test_bgfxdemo.py
pkg/bindgen/: pyproject.toml
pkg/bindgen/bindgen/: __main__.py  actions.py  context.py  entry.py  generator.py  generator_base.py  runner.py  transpiler.py  transpiler_base.py
pkg/bindgen/tests/: test_bindgen.py
pkg/box2d/: CMakeLists.txt  pyproject.toml
pkg/box2d/.cxbind/: box2d.prj.yaml  box2d.unit.yaml  box2d_internal.unit.yaml  collision.unit.yaml  id.unit.yaml  math_functions.unit.yaml  types.unit.yaml
pkg/box2d/src/: box2d_internal.h  box2d_py_auto.cpp  box2d_py_module.cpp  collision_py_auto.cpp  debug_draw_py.cpp  debug_draw_py.h  id_py.cpp  id_py_auto.cpp  math_functions_py.cpp  math_functions_py_auto.cpp  types_py.cpp  types_py_auto.cpp
pkg/box2d/tests/: test_body.py  test_dynamic_body.py  test_ground_box.py  test_simulation.py  test_world.py
pkg/box2d/tests copy/: test_dynamic_body.py  test_world.py
pkg/clang/: pyproject.toml
pkg/core/: pyproject.toml
pkg/crunge/: pyproject.toml
pkg/demo/: pyproject.toml
pkg/engine/: README.md  pyproject.toml  requirements-dev.txt
pkg/gltf/: CMakeLists.txt  pyproject.toml
pkg/gltf/.cxbind/: gltf.cpp  gltf.prj.yaml  gltf.unit.yaml  gltf.yaml  project.yaml
pkg/gltf/src/: generated.cpp  gltf_py.cpp  gltf_py_auto.cpp  gltf_py_module.cpp  mikktspace_py.cpp
pkg/gltf/tests/: test_enum.py  test_load.py
pkg/gltfv/: pyproject.toml  pyproject2.toml  requirements-dev.txt
pkg/gltfv/docs/: references.md
pkg/gltfv/gltfv/: __main__.py  camera.py  cli.py  constants.py  debug.py  globals.py  gltfv copy.py  gltfv.py  info.py  material.py  material_builder copy.py  material_builder.py  mesh copy.py  mesh.py  mesh_builder copy.py  mesh_builder.py  mesh_info.py  node.py  node_builder.py  scene.py  scene_builder.py  tangents copy.py  tangents.py  texture.py  texture_builder.py  uniforms.py  vertex_column.py  vertex_table.py  view.py  viewer.py
pkg/imdemo/: pyproject copy.toml  pyproject.toml  requirements-dev.txt  requirements.txt
pkg/imdemo/examples/: basic.py  framebuffer.py  multiwindow.py
pkg/imdemo/imdemo/: __init__.py  __main__.py  app copy.py  app.py  page.py  particle.py
pkg/imflodemo/: pyproject.toml  requirements-dev.txt  requirements.txt
pkg/imflodemo/examples/: basic.py
pkg/imflodemo/imflodemo/: __init__.py  __main__.py  app.py
(+2135 files in other folders)
