[tool.poetry]
name = "crunge"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
bindgen = {path = "./pkg/bindgen",  develop = true}
procure = {path = "./pkg/procure",  develop = true}
scikit-build = "^0.16.6"
cmake = "^3.25.2"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.masonry.api"
