[build-system]
requires = ["cxbuild==0.2", "setuptools", "wheel"]
build-backend = "cxbuild.backend"

[tool.setuptools]
packages = []

[project]
name = "crunge-root"
version = "0.1.0"
description = 'Creative coding extensions for Python'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.cxbuild]
projects = [
  "pkg/imgui",
  "pkg/implot",
  "pkg/imnodes",
  "pkg/wgpu",
  "pkg/skia",
  "pkg/gltf",
  "pkg/sdl",
  "pkg/nanort",
  ]
plugins = ["cxbind"]

[tool.hatch.envs.default]
python="3.10.11"