[tool.setuptools]
packages = ["box2d_demo"]

[project]
name = "box2d-demo"
version = "0.1.0"
description = 'Crunge Box2D Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    #"loguru ==0.7.2",
    #"box2d ==7.0.0",
    "scipy ==1.14.0",
    #"PyTMX ==3.32",
]

[tool.hatch.envs.default]
python="3.10.11"