[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvasdemo"
version = "0.1.0"
description = 'Crunge Canvas Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
]

[project.scripts]
canvasdemo = 'canvasdemo.cli:cli'

[tool.hatch.envs.default]
python = "3.10"
