[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "implotdemo"
version = "0.1.0"
description = 'Crunge ImPlot Demo'
requires-python = ">=3.8"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
]

[tool.hatch.envs.default]
python = "3.10"
