[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layoutdemo"
version = "0.1.0"
description = 'Crunge Layout Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
]

[project.scripts]
layoutdemo = 'layoutdemo.cli:cli'

[tool.hatch.envs.default]
python = "3.10"
