[tool.setuptools]
packages = ["spritedemo"]

[project]
name = "spritedemo"
version = "0.1.0"
description = 'Crunge Sprite Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    "loguru ==0.7.2",
    "pymunk ==6.8.1",
    "lxml ==5.2.2",
    "scipy ==1.14.0",
    "PyTMX ==3.32",
]
