[tool.setuptools]
packages = ["spritedemo"]

[project]
name = "spritedemo"
version = "0.1.0"
description = 'Crunge Sprite Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    "loguru ==0.7.2",
    "pymunk ==7.0.0",
    "scipy ==1.14.0",
    "PyTMX ==3.32",
]

[tool.hatch.envs.default]
python="3.10.11"