[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uidemo"
version = "0.1.0"
description = 'Crunge UI Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
]

[project.scripts]
uidemo = 'uidemo.cli:cli'

[tool.hatch.envs.default]
python = "3.10"
