[tool.setuptools]
packages = ["wrender"]

[project]
name = "wrender"
version = "0.1.0"
description = 'Crunge WebGPU/GLTF Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    "loguru ==0.7.2",
    "click ==8.1.7",
    "PyGLM ==2.7.1",

    "Jinja2 ==3.1.4",

    #"numpy ==1.26.3",
    #"imageio ==2.34.0",
]

[project.scripts]
wrender = 'wrender.cli:cli'
