[tool.setuptools]
packages = ["yogademo"]

[project]
name = "yogademo"
version = "0.1.0"
description = 'Crunge Yoga Demo'
requires-python = ">=3.10"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    "glfw ==2.7.0",
    "loguru ==0.7.2",
    "PyGLM ==2.7.1",
    "imageio ==2.34.2",
]
