[tool.poetry]
name = "crunge-bgfx"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]
packages = [
  { include = "crunge" },
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
bindgen = {path = "../bindgen",  develop = true}
crunge-core = {path = "../core",  develop = true}
scikit-build = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "scikit-build", "cmake", "ninja"]
build-backend = "poetry.core.masonry.api"
