[tool.poetry]
name = "bgfxdemo"
version = "0.1.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crunge-core = {path = "../core",  develop = true}
crunge-bgfx = {path = "../bgfx",  develop = true}
crunge-imgui = {path = "../imgui",  develop = true}
glfw = "^2.5.6"
loguru = "^0.6.0"
#openmesh = "^1.2.1"
trimesh = "^3.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
