[tool.poetry]
name = "bindgen"
version = "0.1.1"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
toml = "^0.10.2"
click = "^8.1.3"
#clang = "^14.0"
Jinja2 = "^3.1.2"
loguru = "^0.6.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
crunge-clang = {path = "../clang",  develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bindgen = 'bindgen.command:cli'
