#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.setuptools]
packages = ["crunge", "crunge.core"]

[project]
name = "crunge-core"
version = "0.1.0"
description = 'Crunge Core'
#readme = "README.md"
requires-python = ">=3.8"
#license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
