[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crunge"]

[tool.setuptools]
packages = ["crunge", "crunge.demo"]

[project]
name = "crunge-demo"
version = "0.1.0"
description = 'Crunge Demo'
#readme = "README.md"
requires-python = ">=3.10"
#license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click ~=8.2.1",
]
