[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crunge"]

[tool.setuptools]
packages = ["crunge", "crunge.engine"]

[project]
name = "crunge-engine"
version = "0.1.0"
description = ''
#readme = "README.md"
requires-python = ">=3.10"
#license = "MIT"
keywords = []
authors = [
  { name = "kfields", email = "kurtisfields@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "loguru ~=0.7.2",
  "numpy ~=1.26.3",
  "PyGLM ~=2.7.1",
  "imageio ~=2.34.0",
  "opencv-python ~=4.10.0.84",
  "Jinja2 ==3.1.4",
]
