[tool.setuptools]
packages = ["gltfv"]

[project]
name = "gltfv"
version = "0.1.0"
description = 'Crunge WebGPU/GLTF Demo'
requires-python = ">=3.8"
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]

dependencies = [
    "glfw ==2.6.4",
    "loguru ==0.7.2",
    "PyGLM ==2.7.1",
    "trimesh ==4.0.5",
    "imageio ==2.33.1",
    "gltflib ==1.0.13",
    "networkx ==3.2.1",
]
